# TP_synthese_image_2A

./: CMakeLists.txt  README.md  project.sh
Game/: CMakeLists.txt
Game/RubikCube/: Readme.md  game.cpp  rubik.cpp  rubik.hpp
Game/RubikCube/resources/: blue.tga  digits.f.glsl  digits.tga  digits.v.glsl  green.tga  menu.f.glsl  menuHover.tga  menuIddle.tga  menuMask.tga  orange.tga  red.tga  rubik.f.glsl  rubik.tga  rubik.v.glsl  rubiktexture.key  white.tga  yellow.tga
Minimal/: CMakeLists.txt  minimal.cpp
Shading/: CMakeLists.txt  shading.cpp
Textures/: CMakeLists.txt  textures.cpp  textures.hpp
fromScratch/: myOwnOpenGLProg.cpp  myOwnOpenGLProg.h
include/: lightGlAPI.cpp  lightGlAPI.hpp
resources/: fbcubemap.g.glsl  fbcubemap.v.glsl  illumination.f.glsl  illumination.v.glsl  mirror.f.glsl  mirror.v.glsl  myOwnGLSLProg.f.glsl  myOwnGLSLProg.v.glsl  refract.f.glsl  refract.v.glsl  resources.key  skybox.f.glsl  skybox.v.glsl  texture.f.glsl  texture.v.glsl
utils/: textures.cpp  textures.h  vboindexer.cpp
